# Brest

./: README.md  __initi__.py  parser.tar  pyproject.toml  setup.py
data/: parsed_data.pkl  parsed_data_O16.pkl
my_project.egg-info/: PKG-INFO
notebooks/: angulardist._endf.ipynb  angulardist.ipynb  pendf.ipynb
parser/: __initi__.py  parse_mf3.py  parse_mf4.py  utils.py
recon/: __initi__.py  setup.py  sigma.cpp
recon/sigma.egg-info/: PKG-INFO  SOURCES.txt
test/: __initi__.py
