[build-system]
requires = ["setuptools>=42", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1"
description = "My project description"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]

[tool.setuptools]
packages = ["my_project"]

[tool.setuptools.extension-modules]
my_project.sigma = { sources = ["src/sigma.cpp", "src/other_cpp_files.cpp"], include-dirs = ["include"], extra-compile-args = ["-std=c++14"] }
